[workspace]
resolver = "2"
members = ["./crate/*", "./hub-node"]

[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"                                     #错误报告
log = "0.4.21"                                      #日志
tokio = { version = "1.38.0", features = ["full"] } #异步运行时
env_logger = "0.11.3"                               #打印日志

iced = "0.12.1" #GUI框架

opener = "0.7.1" #用系统默认方式打开对象

image = "0.25.1" #图像编解码
