[package]
name = "hub-node"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"                                     #错误报告
log = "0.4.21"                                      #日志
tokio = { version = "1.37.0", features = ["full"] } #异步运行时
env_logger = "0.11.3"                               #打印日志

node-network = { path = "../crate/node-network" }
