[package]
name = "root-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"                                   #错误处理
tokio = { version = "1.36.0", features = ["full"] } #异步运行时
clap = { version = "4.5.2", features = ["derive"] } #命令行参数解析

quinn = "0.10.2"   #QUIC协议
rustls = "0.21.10" #TLS加密
