[package]
name = "node-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tool-code-rs = { path = "../tool-code-rs" }

eyre = "0.6.12"                                     #错误报告
log = "0.4.21"                                      #日志
tokio = { version = "1.38.0", features = ["full"] } #异步运行时

quinn = { version = "0.11.1", features = ["ring"] } #QUIC协议
rustls = "0.23.9"                                   #TLS加密
rcgen = "0.13.1"                                    #自签名X.509证书生成
uuid = { version = "1.8.0", features = ["v4"] }     #通用唯一标识符

serde = { version = "1.0.203", features = ["derive"] } #序列化
rmp-serde = "1.3.0"                                    #MessagePack编解码
