[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"       #错误报告
log = "0.4.21"        #日志生产者
env_logger = "0.11.3" #日志消费者

eframe = "0.27.2"                                          #EGUI运行框架
egui_extras = { version = "0.27.2", features = ["image"] } #EGUI扩展

image = "0.25.1" #图像库
