[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
share-code = { path = "../share-code" } #共享代码
protocol = { path = "../protocol" }     #协议

eyre = "0.6.12"                                     #错误报告
tokio = { version = "1.37.0", features = ["full"] } #异步运行时

eframe = "0.27.2"                                          #EGUI运行框架
egui_extras = { version = "0.27.2", features = ["image"] } #EGUI扩展

opener = "0.7.0" #用系统默认方式打开对象

quinn = "0.10.2"                                #QUIC协议
rustls = "0.21.10"                              #TLS加密
rcgen = "0.13.1"                                #自签名X.509证书生成
uuid = { version = "1.8.0", features = ["v4"] } #通用唯一标识符

serde = { version = "1.0.197", features = ["derive"] } #序列化
rmp-serde = "1.1.2"                                    #MessagePack编解码
serde_json = "1.0.115"                                 #Json编解码

image = "0.25.1" #图像编解码
