[package]
name = "root-node"
version = "0.1.0"
edition = "2021"

[dependencies]
share-code = { path = "../share-code" } #共享代码
protocol = { path = "../protocol" }     #协议

eyre = "0.6.12"                                     #错误报告
log = "0.4.21"                                      #日志
env_logger = "0.11.3"                               #日志消费者
tokio = { version = "1.37.0", features = ["full"] } #异步运行时
clap = { version = "4.5.4", features = ["derive"] } #命令行参数解析

quinn = "0.10.2"   #QUIC协议
rustls = "0.21.10" #TLS加密

rmp-serde = "1.1.2" #MessagePack编解码
